# oci-ai-code-academy

./: .env.example  README.md  pyproject.toml
notebooks/: prompt_engineering.ipynb
oci_ai_code_academy/llms/: config_model.py
oci_ai_code_academy/llms/adapters/: oci_gen_ai_adapter.py
oci_ai_code_academy/oracle_of_cloud/: oracle_of_cloud.py
oci_ai_code_academy/utils/: chromadb_util.py
tests/llms/adapters/: test_oci_gen_ai_adapter.py
